--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AluraBooks</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
-  </head>
-  <body>
-    <h1>AluraBook</h1>
-  </body>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AluraBooks</title>
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="reset.css">
+</head>
+<body>
+h1 {
+background-color: white;
+}
+<h1>AluraBook</h1>
+</body>
 </html>
 
 
