--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-<h1>AluraBook</h1>
+   <header class="cabeçalho">
+     <span class="cabeçalho_menu-hamburguer"></span>
+     <img src="ing/Logo.svg" alt="Logo da Alurabooks">
+     <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+     <a href="#"><img src="img/Compas.svg" alt="Carrinho de compras"></a>
+     <a href="#"><img src="img/Usuário.svg" alt="Meu perfil"></a>
+  </header>
 </body>
-  h1 {
-background-color: white;
-}
 </html>
 
 
