--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <header class="cabeçalho">
      <span class="cabeçalho_menu-hamburguer"></span>
-     <img src="ing/Logo.svg" alt="Logo da Alurabooks">
+     <img src="img/Logo.svg" alt="Logo da Alurabooks">
      <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
      <a href="#"><img src="img/Compas.svg" alt="Carrinho de compras"></a>
      <a href="#"><img src="img/Usuário.svg" alt="Meu perfil"></a>
