--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <title>AluraBooks</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="reset.css">
+<link rel="stylesheet" href="header.css">
 </head>
 <body>
    <header class="cabeçalho">
