--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
    <header class="cabeçalho">
      <span class="cabeçalho_menu-hamburguer"></span>
-     <img src="img/Polygon 1 (Stroke).svg" alt="Logo da Alurabooks">
+     <img src="img/Logo.svg" alt="Logo da Alurabooks">
      <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
      <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
      <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
