--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </head>
 <body>
    <header class="cabeçalho">
-     <span class="cabeçalho_menu-hamburguer"></span>
-     <img src="img/Logo.svg" alt="Logo da Alurabooks">
-     <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
-     <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
-     <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+     <div class="container">
+        <input type="checkbox" id="menu" class="container_botao">
+        <label for="menu" class="container_rotulo">
+           <span class="cabeçalho_menu-hamburguercontainer_imagem"></span>
+        </label>
   </header>
 </body>
 </html>
