--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      <div class="container">
         <input type="checkbox" id="menu" class="container_botao">
         <label for="menu" class="container_rotulo">
-           <span class="cabeçalho_menu-hamburguercontainer_imagem"></span>
+           <span class="cabeçalho_menu-hamburguer container_imagem"></span>
         </label>
   </header>
 </body>
