--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
            <li class="lista-menu_item">
               <a href="#" class="lista-menu_link">Progamção</a>
            </li>
+           <li class="lista-menu_item">
+              <a href="#" class="lista-menu_link'>Infraestrutura</a>
+           </li>
+           <li class="lista-menu_item">
+           <a href="#" class="lista-menu_link">Business</a>
+           </li>                      
   </header>
 </body>
 </html>
