--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
               <a href="#" class="lista-menu_link">Progamção</a>
            </li>
            <li class="lista-menu_item">
-              <a href="#" class="lista-menu_link'>Infraestrutura</a>
+              <a href="#" class="lista-menu_link">Front-end</a>
            </li>
            <li class="lista-menu_item">
-           <a href="#" class="lista-menu_link">Business</a>
+              <a href="#" class="lista-menu_link">Infraestrutura</a>
+           </li>
+           <li class="lista-menu_item">
+              <a href="#" class="lista-menu_link">Business</a>
            </li>                      
   </header>
 </body>
