--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul class="lista-menu">
            <li class="lista-menu_título">Categorias</li>
            <li class="lista-menu_item">
-              <a href="#" class="lista-menu_link">Progamção</a>
+              <a href="#" class="lista-menu_link">Progamação</a>
            </li>
            <li class="lista-menu_item">
               <a href="#" class="lista-menu_link">Front-end</a>
