--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 <body>
    <header class="cabeçalho">
      <div class="container">
-        <input type="checkbox" id="menu" class="container_botao">
-        <label for="menu" class="container_rotulo">
-           <span class="cabeçalho_menu-hamburguer container_imagem"></span>
+        <input type="checkbox" id="menu" class="container__botao">
+        <label for="menu" class="container__rotulo">
+           <span class="cabeçalho__menu-hamburguer container__imagem"></span>
         </label>
         <ul class="lista-menu">
-           <li class="lista-menu_título">Categorias</li>
-           <li class="lista-menu_item">
-              <a href="#" class="lista-menu_link">Progamação</a>
+           <li class="lista-menu__título">Categorias</li>
+           <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Progamação</a>
            </li>
-           <li class="lista-menu_item">
-              <a href="#" class="lista-menu_link">Front-end</a>
+           <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Front-end</a>
            </li>
-           <li class="lista-menu_item">
-              <a href="#" class="lista-menu_link">Infraestrutura</a>
+           <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Infraestrutura</a>
            </li>
-           <li class="lista-menu_item">
-              <a href="#" class="lista-menu_link">Business</a>
+           <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Business</a>
            </li>                      
   </header>
 </body>
