--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
            </li>
            <li class="lista-menu__item">
               <a href="#" class="lista-menu__link">Business</a>
-           </li>                      
+           </li>
+           <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Design & UX</a>
+           </li>
+        </ul>
+        <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+        <h1 class="container__titulo"><b class="container__titulo-negrito">Alura</b>Books</h1>
+      </div>
   </header>
 </body>
 </html>
