--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
         <h1 class="container__titulo"><b class="container__titulo-negrito">Alura</b>Books</h1>
       </div>
+
+      <ul class="opçôes">
+         <input type="checkbox" id="opções-menu" class="opções__botão">
+         <label for="opções-menu" class="opções__rotulo">
+            <li class="opções__item">Categorias</li>
+         </label>
   </header>
 </body>
 </html>
