--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
          <label for="opções-menu" class="opções__rotulo">
             <li class="opções__item">Categorias</li>
          </label>
+
+      <ul class="lista-menu">
+         <li class="lista-menu__item">
+            <a href="#" class="lita-menu__link">Progamação</a>
+         </li>
   </header>
 </body>
 </html>
