--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul class="lista-menu">
            <li class="lista-menu__título">Categorias</li>
            <li class="lista-menu__item">
-              <a href="#" class="lista-menu__link">Progamação</a>
+              <a href="#" class="lista-menu__link">Programação</a>
            </li>
            <li class="lista-menu__item">
               <a href="#" class="lista-menu__link">Front-end</a>
@@ -50,8 +50,21 @@
 
       <ul class="lista-menu">
          <li class="lista-menu__item">
-            <a href="#" class="lita-menu__link">Progamação</a>
+            <a href="#" class="lista-menu__link">Programação</a>
          </li>
+         <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Front-end</a>
+           </li>
+           <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Infraestrutura</a>
+           </li>
+           <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Business</a>
+           </li>
+           <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Design & UX</a>
+           </li>
+        </ul>
   </header>
 </body>
 </html>
