--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
               <a href="#" class="lista-menu__link">Design & UX</a>
            </li>
         </ul>
+           <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
+             <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
+        </ul>
   </header>
 </body>
 </html>
