--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
            <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
              <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
         </ul>
+
+      <div class="container">
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente"></a>
+            <a href="#" class="container__link">
+               <img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
+               <p class="container__texto">Minha sacola</p>
+            </a>
   </header>
 </body>
 </html>
