--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
                <img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
                <p class="container__texto">Minha sacola</p>
             </a>
+            <a href="#" class="container__link">
+            <img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem">
+            <p class="container__texto">Meu perfil</p>
+            </a>
+         </div>
   </header>
 </body>
 </html>
