--- a/index.html
+++ b/index.html
@@ -87,6 +87,26 @@
    <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
    <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
 </section>
+   <section class="carrosel">
+      <h2 class="carrossel__titulo">Novos lançamentos</h2>
+      <!--Slider main container-->
+      <div class="carrossel__container">
+         <div class="swiper">
+            <!--Additional require wrapper-->
+            <!--If we need pagination-->
+            <div class="swiper-pagination"></div>
+            <div class="swiper-wrapper">
+               <!--SLides-->
+               <div class="swiper-slide"><img src="img/ApacheKafka.svg"
+                   alt="Livro sobre apache kafka e spring boot da alura books"></div>
+               <div class="swiper-slide"><img src="img/Liderança.svg"
+                   alt="Livro sobre liderança em design da alura books"></div>
+               <div class="swiper-slide"><img src="img/Javascript.svg"
+                   alt="Livro sobre javascript assertivo da alurabooks"></div>
+               <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro Guia front end"></div>
+               <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre portugol"></div>
+               <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="Livro sobre acessibilidade"></div>
+            </div>
 </body>
 </html>
 
