--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
                <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre portugol"></div>
                <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="Livro sobre acessibilidade"></div>
             </div>
+
+            <!--If we need navegation buttons-->
+                     <div class="swiper-button-prev"></div>
+                     <div class="swiper-button-next"></div>
+                  </div>
 </body>
 </html>
 
