--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
                      <div class="swiper-button-prev"></div>
                      <div class="swiper-button-next"></div>
                   </div>
+
+            <div class="card">
+               <!--1° linha-->
+               <div class="card__descrição">
+                  <!--1° coluna-->
+                  <div class="descrição">
+                     <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
+                     <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+                     <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                  </div>
 </body>
 </html>
 
