--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
                      <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
                      <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
                   </div>
+
+                  <!--2° coluna-->
+                            <img src="img/Angular.svg" class="descrição__imagem">
+                          </div>
 </body>
 </html>
 
