--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
                   <!--2° coluna-->
                             <img src="img/Angular.svg" class="descrição__imagem">
                           </div>
+
+               <!--2° linha-->
+                        <div class="card__botões">
+                           <!--1° coluna-->
+                           <ul class="botões">
+                              <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+                              <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                           </ul>
 </body>
 </html>
 
