--- a/index.html
+++ b/index.html
@@ -135,6 +135,13 @@
                               <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
                               <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
                            </ul>
+
+                  <!--2° coluna-->
+                           <a href="#" class="botões__ancora">Saiba mais</a>
+                        </div>
+                     </div>
+                  </div>
+               </section>
 </body>
 </html>
 
